[gd_scene load_steps=10 format=3 uid="uid://bxhhkjwcak7st"]

[ext_resource type="Texture2D" uid="uid://brdmrx0ykijsw" path="res://Assets/Imagenes/Personajes/ImagenJefe.png" id="1_0ru8p"]
[ext_resource type="Script" path="res://Scripts/enemigo_jefe.gd" id="1_jifef"]
[ext_resource type="PackedScene" uid="uid://cv5y706nmnp34" path="res://Scenes/laserJefe.tscn" id="2_58t2a"]
[ext_resource type="Script" path="res://Scripts/health_bar.gd" id="3_vjpm1"]

[sub_resource type="Animation" id="Animation_4v8mr"]
resource_name = "Transparencia"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_21ubi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m84ku"]
_data = {
"RESET": SubResource("Animation_21ubi"),
"Transparencia": SubResource("Animation_4v8mr")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panvq"]
bg_color = Color(0, 0, 0, 1)
skew = Vector2(-2.5, 0)
border_width_left = 35
border_width_right = 20
border_width_bottom = 5
border_color = Color(0.8, 0.32549, 0.172549, 1)
corner_detail = 20
expand_margin_left = 30.0
expand_margin_right = 20.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyvxp"]
bg_color = Color(0.737255, 0, 0, 1)
skew = Vector2(-2.5, 0)

[node name="EnemigoJefe" type="CharacterBody2D"]
position = Vector2(550, 110)
script = ExtResource("1_jifef")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_0ru8p")

[node name="Area2D" type="Area2D" parent="Sprite2D" groups=["Enemigo"]]
scale = Vector2(2.5, 2.5)

[node name="Derecha" type="Marker2D" parent="Sprite2D/Area2D"]
position = Vector2(85, 25)

[node name="Izquierda" type="Marker2D" parent="Sprite2D/Area2D"]
position = Vector2(-95, 27)

[node name="FuenteLaser" type="Marker2D" parent="Sprite2D/Area2D"]
position = Vector2(0, 30)

[node name="Danio" type="CollisionPolygon2D" parent="Sprite2D/Area2D"]
visible = false
polygon = PackedVector2Array(-112, 3, -105, 13, -103, 28, -91, 28, -85, 11, -44, 19, -22, 19, -13, 47, -8, 32, 9, 30, 24, 13, 71, 10, 79, 25, 91, 25, 97, 14, 92, 1, 116, -33, -104, -33)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m84ku")
}

[node name="LaserJefe" parent="." instance=ExtResource("2_58t2a")]
visible = false

[node name="paraHealthBar" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="paraHealthBar"]
offset_left = 800.0
offset_top = 20.0
offset_right = 1800.0
offset_bottom = 47.0
scale = Vector2(0.3, 0.3)
theme_override_styles/background = SubResource("StyleBoxFlat_panvq")
theme_override_styles/fill = SubResource("StyleBoxFlat_lyvxp")
step = 10.0
value = 100.0
show_percentage = false
script = ExtResource("3_vjpm1")
